[RealtyServer] JDK 버전변경 영향도 수정작업 (openJDK20 -> openJDK17)
1. 가비아 웹 호스팅 시 jdk 17까지 지원하는 상황으로 jdk 버전을 20에서 17로 하향